re-factor attack impact + improve pawn attack impact